# dataant

./: .gitignore  README.md  main.py  prompt_template.txt  pyproject.toml  requirements.txt
dataant/: db.py  engine.py  model.py  ui_app.py  ui_plot.py  ui_plots.py  util.py
tests/: multiclass_roc.py  plot_shiny.py
